@@ -1,4 +1,5 @@
 SVN
+* added a reset form function to jrails.js (stolen from jquery form)
 * can now use jquery selectors in all functions
 * added javascript_function helper to render inline rjs helpers
 * better support for sortable_element
